syntax = "proto3";
package tendermint.abci;
message TxResult {
    int64             height = 1;
    uint32            index  = 2;
    bytes             tx     = 3;
    ResponseDeliverTx result = 4 ;
  }

message ResponseDeliverTx {
    uint32         code       = 1;
    bytes          data       = 2;
    string         log        = 3;  // nondeterministic
    string         info       = 4;  // nondeterministic
    int64          gas_wanted = 5 [json_name = "gas_wanted"];
    int64          gas_used   = 6 [json_name = "gas_used"];
    repeated Event events     = 7;  // nondeterministic
    string codespace = 8;
  }

message Event {
    string                  type       = 1;
    repeated EventAttribute attributes = 2 ;
}
// EventAttribute is a single key-value pair, associated with an event.
message EventAttribute {
  string key   = 1;
  string value = 2;
  bool   index = 3;  // nondeterministic
}

message User {
  string name = 1;
  int32 age = 2;
}